@@ -6,12 +6,13 @@ import io.smallrye.mutiny.Uni;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/tokentypes")
 public class TokenTypeEndpoint {
     @GET
     public Uni<List<String>> getTokenTypes() {
-        return TokenTypeEntity.<TokenTypeEntity>listAll().map(tokenTypeEntities -> tokenTypeEntities.stream().map(TokenTypeEntity::getName).collect(Collectors.toList()));
+        return TokenTypeEntity
+                .<TokenTypeEntity>listAll()
+                .map(list -> list.stream().map(tokentype -> tokentype.name).toList());
     }
 }
